welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:7: error: reassignment to val
      die1=die1+1
          ^withoutDoubles:8: error: reassignment to val
      if(die1==7)die1=1
                     ^